--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,19 @@
 <resources>
     <string name="app_name">烹飪計算器</string>
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btn_cancel">取消</string>
+    <string name="btn_confirm">確定</string>
+    <string name="tv_empty">目前沒有資料</string>
+    <string name="ed_name">品項名稱</string>
+    <string name="ed_description">輸入描述</string>
+    <string name="ed_ingredient">材料</string>
+    <string name="ed_weight">重量</string>
+    <string name="ed_total">總重量</string>
+    <string name="ad_message">查看食譜</string>
+    <string name="ad_delete">刪除</string>
+    <string name="ad_cancel">取消</string>
+    <string name="ad_view">查看</string>
 </resources>
